	- fix: permit '\0' as special case key (e.g. "/" in Basenames).
	- require --rebuilddb to convert db1 -> db3, better messages.
	- fix: open all db indices before performing chroot.
	- fix: typo in brp-compress caused i18n man pages not to compress.
	- API: uncouple fadio from rest of rpmio.
	- API: externalize legacy fdOpen interface for rpmfind et al.

3.0.4 -> 3.0.5
	- handle version 4 packaging as input.
	- builds against bzip2 1.0
	- fix: resurrect symlink unique'ifying property of finger prints.
	- fix: broken glob test with empty build directory (Geoff Keating).
        - fix: create per-platform directories correctly.
        - update brp-* scripts from rpm-4.0, enable in per-platform config.
        - alpha: add -mieee to default optflags.
	- add RPMTAG_OPTFLAGS, configured optflags when package was built.
	- add RPMTAG_DISTURL for rpmfind-like tools (content unknown yet).
	- teach brp-compress about /usr/info and /usr/share/info as well.
	- update macros.in from rpm-4.0 (w/o dbi configuration).
	- fix: don't expand macros in false branch of %if (kasal@suse.cz).
	- fix: macro expansion problem and clean up (#11484) (kasal@suse.cz).
	- uname on i370 has s390 as arch (#11456).

3.0.3 -> 3.0.4
	- use compressed filenames on install side.
	- start unifying FD types, CFD_t now gone.
	- check for memory leaks (almost all leaks are plugged).
	- fix: resurrect multiple target platform builds.
	- freshen.sh: detect when all packages are up to date (Ian Macdonald).
	- fix: typo in error message (#6858).
	- add/update dependency scripts (Ken Estes).
	- use directory tokens internally to reduce memory usage.
	- permit --whatprovides to lookup file dependencies.
	- fail to package if absolute symlink points within build root.
	- initial version of check-prereqs.
	- expose enough of legacy fdio interface to compile rpmfind/rpm2html.
	- fix: Fopen should use 0666 as default (umask will be applied later).