@@ -66,6 +66,7 @@
 	- fix: typo in brp-compress caused i18n man pages not to compress.
 	- API: uncouple fadio from rest of rpmio.
 	- API: externalize legacy fdOpen interface for rpmfind et al.
+	- put version on rpmpopt filename to avoid legacy name collision.
 
 3.0.4 -> 3.0.5
 	- handle version 4 packaging as input.
